// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ChartBulletTitle 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative;"
  >
    <svg
      height="140"
      role="img"
      style="width: 100%; height: 100%; pointer-events: all;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="width: 100%; height: 100%; z-index: 99; position: absolute; top: 0px; left: 0px;"
    >
      <svg
        height="140"
        style="width: 100%; height: 100%; overflow: visible;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`ChartBulletTitle 2`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative;"
  >
    <svg
      height="140"
      role="img"
      style="width: 100%; height: 100%; pointer-events: all;"
      viewBox="0 0 450 140"
      width="450"
    />
    <div
      style="width: 100%; height: 100%; z-index: 99; position: absolute; top: 0px; left: 0px;"
    >
      <svg
        height="140"
        style="width: 100%; height: 100%; overflow: visible;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;

exports[`renders component data 1`] = `
<DocumentFragment>
  <div
    class="pf-v6-c-chart"
    style="pointer-events: none; position: relative;"
  >
    <svg
      height="140"
      role="img"
      style="width: 100%; height: 100%; pointer-events: all;"
      viewBox="0 0 450 140"
      width="450"
    >
      <text
        direction="inherit"
        dx="0"
        id="test2"
        x="36"
        y="70.1"
      >
        <tspan
          dx="0"
          dy="0"
          style="fill: var(--pf-v6-chart-bullet--label--title--Fill, #1f1f1f); font-size: 18px; text-anchor: end; font-family: var(--pf-v6-chart-global--FontFamily, "Red Hat Text", "RedHatText", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif); letter-spacing: var(--pf-v6-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="end"
          x="36"
        >
          Text label
        </tspan>
        <tspan
          dx="0"
          dy="13.8"
          style="fill: var(--pf-v6-chart-bullet--label--subtitle--Fill, #a3a3a3); font-size: 14px; text-anchor: end; font-family: var(--pf-v6-chart-global--FontFamily, "Red Hat Text", "RedHatText", "Noto Sans Arabic", "Noto Sans Hebrew", "Noto Sans JP", "Noto Sans KR", "Noto Sans Malayalam", "Noto Sans SC", "Noto Sans TC", "Noto Sans Thai", Helvetica, Arial, sans-serif); letter-spacing: var(--pf-v6-chart-global--letter-spacing, normal); stroke: transparent;"
          text-anchor="end"
          x="36"
        >
          Measure details
        </tspan>
      </text>
    </svg>
    <div
      style="width: 100%; height: 100%; z-index: 99; position: absolute; top: 0px; left: 0px;"
    >
      <svg
        height="140"
        style="width: 100%; height: 100%; overflow: visible;"
        viewBox="0 0 450 140"
        width="450"
      />
    </div>
  </div>
</DocumentFragment>
`;
